Implementing product management.

--- a/backend/src/LearningKurrent.Application/LearningKurrent.Application.csproj
+++ b/backend/src/LearningKurrent.Application/LearningKurrent.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\LearningKurrent.Domain\LearningKurrent.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
 </Project>
