--- a/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
+++ b/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
@@ -15,6 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.3.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LearningKurrent.Application\LearningKurrent.Application.csproj" />
   </ItemGroup>
 
