--- a/backend/src/LearningKurrent.Application/LearningKurrent.Application.csproj
+++ b/backend/src/LearningKurrent.Application/LearningKurrent.Application.csproj
@@ -22,4 +22,9 @@
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Using Include="System.Reflection" />
+    <Using Include="System.Text" />
+  </ItemGroup>
+
 </Project>
