--- a/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
+++ b/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
@@ -16,10 +16,16 @@
 
   <ItemGroup>
     <PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.3.7" />
+    <PackageReference Include="Logitar.Data" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LearningKurrent.Application\LearningKurrent.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="System.Reflection" />
   </ItemGroup>
 
 </Project>
