--- a/backend/src/LearningKurrent/appsettings.Development.json
+++ b/backend/src/LearningKurrent/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
+  "EnableMigrations": true,
   "EnableOpenApi": true,
+  "ESDBCONNSTR_LearningKurrent": "esdb://admin:changeit@localhost:42113?tls=false&tlsVerifyCert=false",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SQLCONNSTR_LearningKurrent": "Server=localhost,41433;Database=LearningKurrent;User Id=SA;Password=gq2rczbJUA8TGD4F;Persist Security Info=False;Encrypt=False;"
 }
