--- a/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
+++ b/backend/src/LearningKurrent.Infrastructure/LearningKurrent.Infrastructure.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.3.7" />
     <PackageReference Include="Logitar.Data" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
