--- a/backend/src/LearningKurrent.Domain/LearningKurrent.Domain.csproj
+++ b/backend/src/LearningKurrent.Domain/LearningKurrent.Domain.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Logitar" Version="7.0.0" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
