--- a/backend/src/LearningKurrent.Domain/LearningKurrent.Domain.csproj
+++ b/backend/src/LearningKurrent.Domain/LearningKurrent.Domain.csproj
@@ -14,4 +14,15 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="Logitar" Version="7.0.0" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="System.Diagnostics.CodeAnalysis" />
+    <Using Include="System.Reflection" />
+  </ItemGroup>
+
 </Project>
